gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-ingress
spec:
  gatewayClassName: istio
  listeners:
  - allowedRoutes:
      kinds:
      - kind: TLSRoute
        group: gateway.networking.k8s.io
      namespaces:
        from: All
    name: mytcp
    port: 8090
    protocol: TLS
    tls:
      mode: Passthrough
