my-3broker-cluster-kafka-with-tlsroutes.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: my-3broker-cluster-kafka-tls-bootstrap
  namespace: kafka
spec:
  hostnames:
  - my-3broker-cluster-kafka-bootstrap.kafka
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: istio-ingress
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: my-3broker-cluster-kafka-tls-bootstrap
      port: 9093
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: my-3broker-cluster-kafka-tls-0
  namespace: kafka
spec:
  hostnames:
  - my-3broker-cluster-kafka-0.kafka
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: istio-ingress
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: my-3broker-cluster-kafka-tls-0
      port: 9093
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: my-3broker-cluster-kafka-tls-1
  namespace: kafka
spec:
  hostnames:
  - my-3broker-cluster-kafka-1.kafka
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: istio-ingress
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: my-3broker-cluster-kafka-tls-1
      port: 9093
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: my-3broker-cluster-kafka-tls-2
  namespace: kafka
spec:
  hostnames:
  - my-3broker-cluster-kafka-2.kafka
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: istio-ingress
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: my-3broker-cluster-kafka-tls-2
      port: 9093
      weight: 1
